--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import json\n",
-    "from utils.bots import RandBot, RdeepBot, BotA, BotB, BotC\n",
+    "from utils.bots import RandBot, RdeepBot, BullyBot, BotA, BotB, BotC\n",
     "from utils.game import SchnapsenGamePlayEngine\n",
     "\n",
     "class Duel(): \n",
@@ -54,15 +54,16 @@
     "        else:\n",
     "            return SchnapsenGamePlayEngine().play_game(self.bots[1], self.bots[0], random.Random(random.randint(0, 200)))\n",
     "\n",
-    "# bots = [\n",
-    "#     RandBot(rand=random.Random(random.randint(0, 200)), name=\"RandBot\"),\n",
-    "#     RdeepBot(num_samples = 20, depth=5, rand=random.Random(random.randint(0, 200)), name=\"RdeepBot\"),\n",
-    "# ]\n",
     "bots = [\n",
-    "    BotA( name=\"BotA1\"),\n",
-    "    BotB( name=\"BotB1\"),\n",
-    "    BotC( name=\"BotC1\")\n",
+    "    RandBot(rand=random.Random(random.randint(0, 200)), name=\"RandBot\"),\n",
+    "    RdeepBot(num_samples = 20, depth=5, rand=random.Random(random.randint(0, 200)), name=\"RdeepBot\"),\n",
+    "    BullyBot(rand=random.Random(random.randint(0, 200)), name=\"BullyBot\")\n",
     "]\n",
+    "# bots = [\n",
+    "#     BotA( name=\"BotA1\"),\n",
+    "#     BotB( name=\"BotB1\"),\n",
+    "#     BotC( name=\"BotC1\")\n",
+    "# ]\n",
     "\n",
     "myBots = [\n",
     "    BotA( name=\"BotA\"),\n",
@@ -75,7 +76,7 @@
     "    \n",
     "        bot1 = bots[j]\n",
     "        bot2 = myBots[i]\n",
-    "        results = Duel(bot1, bot2).playMatches(50)\n",
+    "        results = Duel(bot1, bot2).playMatches(1)\n",
     "\n",
     "        with open(f\"test_results/results_{str(bot1)}_vs_{str(bot2)}.json\", \"w\") as file:\n",
     "            json.dump(results, file)     \n",
