--- a/test.ipynb
+++ b/test.ipynb
@@ -12,16 +12,29 @@
     "from utils.game import SchnapsenGamePlayEngine\n",
     "\n",
     "class Duel(): \n",
+    "    \"\"\" A class used to run a defined set of matches to 7 game points between 2 bots\n",
+    "    \"\"\"\n",
     "    def __init__(self, bot1, bot2):\n",
+    "        \"\"\" \n",
+    "        :param: match_results: results of the current match used to store gamepoints between individual games\n",
+    "        :param: victories: stores the amount of games won by individual players\n",
+    "        :param: total results: stores the total amount of game points achieved in all matches\n",
+    "        :param: bots: a tuple of the 2 bots participating in the Duel\n",
+    "        \"\"\"\n",
     "        self.match_results = None\n",
     "        self.victories = {str(bot1): 0, str(bot2): 0}\n",
     "        self.total_results = {str(bot1): 0, str(bot2): 0}\n",
     "        self.bots = [bot1, bot2]\n",
     "\n",
     "    def playMatches(self, n):\n",
-    "\n",
-    "        # keep this here cause otherwise match victories is gonna be 0\n",
-    "        logs = [self.playMatch(m + 1) for m in range(n)]\n",
+    "        \"\"\" A function that runs n matches and stores the results in a specified format\n",
+    "        :param: n: the amount of matches to be played\n",
+    "        :return: duel results in the form of a dictionary, with the amount of total victories in the Duel, \n",
+    "            as well as total game points achieved and logs of all individual games' results\n",
+    "        \"\"\"\n",
+    "        # play n matches, while providing each match with a unique identifier\n",
+    "        # Note: Keep this here for correct return value\n",
+    "        logs = [self.playMatch(mId + 1) for mId in range(n)]\n",
     "\n",
     "        return {\n",
     "            \"duel-results\": {\n",
@@ -31,54 +44,71 @@
     "            \"progress-logs\": logs\n",
     "        }\n",
     "\n",
-    "    def updateTotalResults(self):\n",
-    "         self.victories[[ name for name, score in self.match_results.items() if score >= 7][0]] += 1\n",
-    "         self.total_results = { key: self.total_results[key] + self.match_results[key] for key in self.match_results.keys()  }\n",
-    "\n",
     "    def playMatch(self, matchID):\n",
+    "        \"\"\" Play a match of schnapsen to 7 game points\n",
+    "        :param: matchID: a numeric value used to distinguish individual matches played in a duel\n",
+    "        :return: results of the match as well as the amount of game points achieved so far\n",
+    "        \"\"\"\n",
+    "        # delete the results of the previous match and start from 0 on both sides\n",
     "        self.match_results = {str(self.bots[0]): 0, str(self.bots[1]): 0}\n",
+    "        # set the leader of the first trick so that a different one begins every match\n",
     "        firstBot = str(self.bots[matchID % 2])\n",
     "\n",
+    "        # Play games until one of the players has achieved 7 points\n",
     "        while all(p < 7 for p in self.match_results.values()):\n",
+    "            # play a game\n",
     "            winner_id, game_points, score = self.play_game(firstBot)\n",
+    "            # log the results\n",
     "            self.match_results[str(winner_id)] += game_points\n",
+    "            # set the winner of the match as the leader of the next game's first trick\n",
     "            firstBot = str(winner_id)\n",
+    "            \n",
+    "        self.__updateTotalResults()\n",
     "\n",
-    "        self.updateTotalResults()\n",
-    "\n",
-    "        return {\"match-id\": matchID,\"match-results\": self.match_results, \"total-results\": self.total_results}\n",
+    "        return {\"match-id\": matchID, \"match-results\": self.match_results, \"total-results\": self.total_results}\n",
     "\n",
     "    def play_game(self, firstBot = None):\n",
+    "        \"\"\" Play a single game starting with the specified player\n",
+    "        :return: a tuple containting (id of the winner, game points the winner has achieved, score of the game)\n",
+    "        \"\"\"\n",
+    "\n",
     "        if str(self.bots[0]) == firstBot :\n",
     "            return SchnapsenGamePlayEngine().play_game(self.bots[0], self.bots[1], random.Random(random.randint(0, 200)))\n",
     "        else:\n",
     "            return SchnapsenGamePlayEngine().play_game(self.bots[1], self.bots[0], random.Random(random.randint(0, 200)))\n",
     "\n",
+    "    def __updateTotalResults(self):\n",
+    "         \"\"\" After each completed match, run this function to update the final stats of the Duel\n",
+    "         \"\"\"\n",
+    "         \n",
+    "         self.victories[[ name for name, score in self.match_results.items() if score >= 7][0]] += 1\n",
+    "         self.total_results = { key: self.total_results[key] + self.match_results[key] for key in self.match_results.keys()  }\n",
+    "\n",
+    "\n",
+    "# bots to be tested\n",
+    "testedBots = [\n",
+    "    BotA( name=\"BotA\"),\n",
+    "    BotB( name=\"BotB\"),\n",
+    "    BotC( name=\"BotC\")\n",
+    "]\n",
+    "# bots to test againts\n",
     "bots = [\n",
     "    RandBot(rand=random.Random(random.randint(0, 200)), name=\"RandBot\"),\n",
     "    RdeepBot(num_samples = 20, depth=5, rand=random.Random(random.randint(0, 200)), name=\"RdeepBot\"),\n",
     "    BullyBot(rand=random.Random(random.randint(0, 200)), name=\"BullyBot\")\n",
     "]\n",
-    "# bots = [\n",
-    "#     BotA( name=\"BotA1\"),\n",
-    "#     BotB( name=\"BotB1\"),\n",
-    "#     BotC( name=\"BotC1\")\n",
-    "# ]\n",
-    "\n",
-    "myBots = [\n",
-    "    BotA( name=\"BotA\"),\n",
-    "    BotB( name=\"BotB\"),\n",
-    "    BotC( name=\"BotC\")\n",
-    "]\n",
     "          \n",
-    "for i in range(len(myBots)):\n",
+    "for i in range(len(testedBots)):\n",
     "    for j in range(len(bots)):\n",
     "    \n",
-    "        bot1 = bots[j]\n",
-    "        bot2 = myBots[i]\n",
+    "        # Play n matches and get the results\n",
+    "        bot1 = testedBots[i]\n",
+    "        bot2 = bots[j]\n",
     "        results = Duel(bot1, bot2).playMatches(1)\n",
     "\n",
-    "        with open(f\"test_results/results_{str(bot1)}_vs_{str(bot2)}.json\", \"w\") as file:\n",
+    "        # Output results into a text file\n",
+    "        path = \"test_results/\"\n",
+    "        with open(f\"{path}results_{str(bot1)}_vs_{str(bot2)}.json\", \"w\") as file:\n",
     "            json.dump(results, file)     \n",
     "             \n"
    ]
